uplode again to rectify forgetting to save changes to fix overflow issue on the index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,6 @@ menu:hover{
 .historical{
     text-align: left;
     padding: 10px 0 0 10px;
-    font-size: 140%;
 }
 
 .tragedy{
